fix(RandomPointsGenerator): 마지막 points 무조건 OFF 생성하도록 수정