@@ -2,6 +2,7 @@ package ladder.domain;
 
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class RandomPointsGenerator {
@@ -13,12 +14,13 @@ public class RandomPointsGenerator {
     public List<Point> generate(int size) {
         List<Point> points = Stream.iterate(Point.OFF, this::getPoints)
                 .skip(1)
-                .limit(size)
-                .toList();
+                .limit(size - 1)
+                .collect(Collectors.toList());
 
         if (!points.contains(Point.ON)) {
             return generate(size);
         }
+        points.add(Point.OFF);
         return points;
     }
 
